# 2dgames-in-rust

./: README.md
2dgames-jorge-danny-cynthia/: Cargo.toml
2dgames-jorge-danny-cynthia/src/: animation.rs  collision.rs  input.rs  lib.rs  movingbox.rs  objects.rs  screen.rs  sprite.rs  text.rs  texture.rs
