[package]
name = "engine2d"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge.aparicio.pomona.edu>, Cynthia Li, Danny Lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
image = "0.23.14"
rodio = "0.13.0"
rand = "0.8.3"
substring = "1.4.5"
serde_json = "1.0.59"
serde = { version = "1.0.125", features = ["derive"]}
